--- a/KetoSavageWeb/KetoSavageWeb/App_Themes/KetoSavage/HtmlEditor/styles.css
+++ b/KetoSavageWeb/KetoSavageWeb/App_Themes/KetoSavage/HtmlEditor/styles.css
@@ -30,7 +30,7 @@
     -khtml-border-radius: 50%;
     border-radius: 50%;
     animation: dxLoadSpinSys 1s linear infinite;
-    border: 4px solid #DEDEDE;
+    border: 4px solid #000000;
     border-top: 4px solid #EEE;
     width: 24px;
     height: 24px;
@@ -54,7 +54,7 @@ html.dxIE.dxBrowserVersion-9 .dxheLoadingPanel_KetoSavage .dxlp-loadingImage
     -khtml-border-radius: 50%;
     border-radius: 50%;
     animation: dxLoadSpinSys 1s linear infinite;
-    border: 4px solid #DEDEDE;
+    border: 4px solid #000000;
     border-top: 4px solid #EEE;
     width: 24px;
     height: 24px;
@@ -119,14 +119,14 @@ html.dxIE.dxBrowserVersion-9 .dxheDesignViewArea_KetoSavage .dx-base64img-wrappe
 .dxheDesignViewArea_KetoSavage,
 .dxhePreviewArea_KetoSavage
 {
-    background: none #FFFFFF;
+    background: none #000000;
 }
 .dxheControl_KetoSavage .dxheHtmlViewArea_KetoSavage,
 body.dxheDesignViewArea_KetoSavage,
 body.dxhePreviewArea_KetoSavage
 {
     margin: 0px;
-    background: none #FFFFFF;
+    background: none #000000;
     border: 0;
     font-size: smaller;
     font: 12px Arial, Helvetica, sans-serif;
@@ -152,7 +152,7 @@ body.dxhePreviewArea_KetoSavage
 .dxheControl_KetoSavage td.dxheDesignViewArea_KetoSavage .dxm-main.dxmtb
 {
     border: 1px solid #C3C3C3;
-    background: #ffffff;
+    background: #000000;
 }
 .dxheControl_KetoSavage td.dxheDesignViewArea_KetoSavage
 {
@@ -212,12 +212,12 @@ td.dxheDesignViewArea_KetoSavage .dxmLite_KetoSavage.dxm-rtl
     background-repeat: no-repeat;
     background-position: center;
     background-color: #cfcfcf;
-    border: 1px dotted #FFFFFF;
+    border: 1px dotted #000000;
     opacity: 0.8;
 }
 .dxheViewArea_KetoSavage .dxhe-tiControlsWrapper
 {
-    background-color: #DEDEDE;
+    background-color: #000000;
     padding: 3px 4px 2px 10px;
     border: none;
 }
@@ -300,7 +300,7 @@ body.dxheDesignViewArea_KetoSavage pre
 /* Status Bar */
 .dxheStatusBar_KetoSavage
 {
-    background-color: #f1f1f1;
+    background-color: #000000;
 }
 .dxheControl_KetoSavage .dxheStatusBar_KetoSavage .dxheStatusBarTab_KetoSavage .dxtc-link
 {
@@ -332,7 +332,7 @@ body.dxheDesignViewArea_KetoSavage pre
     border-top: none;
     border-left: 1px solid #E6E6E6;
     border-right: 1px solid #E6E6E6;
-    background-color: #FFFFFF;
+    background-color: #000000;
 }
 .dxheStatusBar_KetoSavage .dxtcLite_KetoSavage.dxtc-bottom > .dxtc-stripContainer .dxtc-leftIndent
 {
@@ -345,7 +345,7 @@ body.dxheDesignViewArea_KetoSavage pre
 .dxheStatusBar_KetoSavage .dxtcLite_KetoSavage > .dxtc-stripContainer .dxtc-activeTab,
 .dxheStatusBar_KetoSavage .dxtcLite_KetoSavage > .dxtc-stripContainer .dxtc-activeTab a
 {
-    color: #DEDEDE;
+    color: #000000;
 }
 .dxheStatusBar_KetoSavage .dxtcLite_KetoSavage > .dxtc-stripContainer .dxtc-tab a
 {
@@ -413,7 +413,7 @@ body.dxheDesignViewArea_KetoSavage pre
     color: #484848;
     width: 100%;
     border-bottom: Solid 1px #E5E5E5;
-    background-color: #f1f1f1;
+    background-color: #000000;
     padding-bottom: 2px;
 }
 .dxtbControl_KetoSavage td.dxmMenu_KetoSavage
@@ -426,7 +426,7 @@ body.dxheDesignViewArea_KetoSavage pre
 }
 .dxtbControl_KetoSavage .dxmLite_KetoSavage .dxm-main
 {
-    background-color: #f1f1f1;
+    background-color: #000000;
 }
 .dxtbControl_KetoSavage .dxmLite_KetoSavage .dxmtb.dxm-horizontal .dxm-separator b
 {
@@ -494,7 +494,7 @@ body.dxheDesignViewArea_KetoSavage pre
 }
 .dxflFormLayout_KetoSavage.dxhe-mediaDialog .dxic-previewPanel.dxrpControl_KetoSavage
 {
-    background: #FFFFFF;
+    background: #000000;
     border: 1px dashed #A3A3A3;
 }
 .dxflFormLayout_KetoSavage.dxhe-mediaDialog .dxic-previewPanel.dxrpControl_KetoSavage .dxic-previewText
@@ -579,15 +579,15 @@ div.dxflFormLayout_KetoSavage.dxhe-mediaDialogMainSettings > table.dxhe-dialogLG
 {
     box-sizing: border-box;
     position: absolute;
-    border: 1px solid #DEDEDE;
-    background-color: #DEDEDE;
+    border: 1px solid #000000;
+    background-color: #000000;
     -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=30)";
     opacity: 0.3;
 }
 .dxheDesignViewArea_KetoSavage .dxhe-tiWrapper
 {
     border-bottom: 1px solid #E5E5E5;
-    background-color: #F1F1F1;
+    background-color: #000000;
 }
 .dxheDesignViewArea_KetoSavage .dxhe-tiSeparator,
 .dxheDesignViewArea_KetoSavage .dxhe-tiTagName
@@ -596,7 +596,7 @@ div.dxflFormLayout_KetoSavage.dxhe-mediaDialogMainSettings > table.dxhe-dialogLG
 }
 .dxheDesignViewArea_KetoSavage .dxheSelectedTag_KetoSavage
 {
-    color: #FFFFFF;
+    color: #000000;
 }
 .dxhe-intelliSenseSysWin .dxeListBox_KetoSavage.dxeFocused_KetoSavage
 {
