--- a/KetoSavageWeb/KetoSavageWeb/App_Themes/KetoSavage/RichEdit/styles.css
+++ b/KetoSavageWeb/KetoSavageWeb/App_Themes/KetoSavage/RichEdit/styles.css
@@ -13,7 +13,7 @@
 }
 .dxreControl_KetoSavage .dxreView
 {
-    background-color: #FFFFFF;
+    background-color: #000000;
 }
 .dxreControl_KetoSavage .dxflFormLayout_KetoSavage .dxre-editorsGroupWithPaddings
 {
@@ -43,7 +43,7 @@
 .dxreControl_KetoSavage .dxreRulerWrapper
 {
     padding-top: 2px;
-    background-color: #FFFFFF;
+    background-color: #000000;
 }
 .dxreControl_KetoSavage .dxreRulerWrapper .dxre-rulertabAlignBox
 {
@@ -158,7 +158,7 @@
 }
 .dxreControl_KetoSavage .dxreBar
 {
-    background-color: #FFFFFF;
+    background-color: #000000;
     border-top: 1px solid #DFDFDF;
     height: 22px;
 }
@@ -193,7 +193,7 @@
 }
 .dxreControl_KetoSavage .dxreDlgListBox .dxreDlgListSelected
 {
-    background-color: #DEDEDE;
+    background-color: #000000;
 }
 .dxreControl_KetoSavage .dxre-numberinglistdialog
 {
@@ -735,7 +735,7 @@
     -khtml-border-radius: 50%;
     border-radius: 50%;
     animation: dxLoadSpinSys 1s linear infinite;
-    border: 2px solid #DEDEDE;
+    border: 2px solid #000000;
     border-top: 2px solid #EEE;
     width: 12px;
     height: 12px;
