--- a/KetoSavageWeb/KetoSavageWeb/App_Themes/KetoSavage/Scheduler/styles.css
+++ b/KetoSavageWeb/KetoSavageWeb/App_Themes/KetoSavage/Scheduler/styles.css
@@ -71,7 +71,7 @@
     -khtml-border-radius: 50%;
     border-radius: 50%;
     animation: dxLoadSpinSys 1s linear infinite;
-    border: 4px solid #DEDEDE;
+    border: 4px solid #000000;
     border-top: 4px solid #EEE;
     width: 24px;
     height: 24px;
@@ -111,7 +111,7 @@ html.dxIE.dxBrowserVersion-9 .dxscLoadingPanel_KetoSavage .dxlp-loadingImage
 .dxscAlternateTimelineDateHeader_KetoSavage,
 .dxscAlternateDateHeader_KetoSavage
 {
-    background: #DEDEDE;
+    background: #000000;
     color: white;
 }
 .dxscDayHeader_KetoSavage
@@ -125,7 +125,7 @@ html.dxIE.dxBrowserVersion-9 .dxscLoadingPanel_KetoSavage .dxlp-loadingImage
 .dxscTodayCellHeader_KetoSavage
 {
     border-top-width: 1px;
-    background: #DEDEDE;
+    background: #000000;
     color: white;
 }
 .dxscTimelineDateHeader_KetoSavage
@@ -265,7 +265,7 @@ html.dxIE.dxBrowserVersion-9 .dxscLoadingPanel_KetoSavage .dxlp-loadingImage
 .dxscMoreButton_KetoSavage
 {
     font-size: 0.91em;
-    color: #DEDEDE;
+    color: #000000;
     text-decoration: none;
     padding: 0;
 }
@@ -354,7 +354,7 @@ html.dxIE.dxBrowserVersion-9 .dxscLoadingPanel_KetoSavage .dxlp-loadingImage
 {
     font-size: 1.17em;
     white-space: nowrap;
-    color: #DEDEDE;
+    color: #000000;
     text-transform: uppercase;
 }
 .dxscToolbarContainer_KetoSavage .dxsc-adaptive-toolbar .dxsc-view-visible-interval-table
@@ -399,7 +399,7 @@ html.dxIE.dxBrowserVersion-9 .dxscLoadingPanel_KetoSavage .dxlp-loadingImage
 .dxscViewNavigatorButton_KetoSavage.dxscViewNavigatorGotoTodayButton
 {
     padding: 0 4px 3px;
-    color: #DEDEDE;
+    color: #000000;
 }
 .dxscViewNavigatorButtonHover_KetoSavage.dxscViewNavigatorGotoTodayButton
 {
@@ -446,7 +446,7 @@ html.dxIE.dxBrowserVersion-9 .dxscLoadingPanel_KetoSavage .dxlp-loadingImage
 .dxscViewSelector_KetoSavage .dxmLite_KetoSavage .dxm-main .dxm-item.dxm-checked.dxm-hovered,
 .dxscViewSelectorButtonChecked_KetoSavage
 {
-    border-bottom: 4px solid #DEDEDE;
+    border-bottom: 4px solid #000000;
     color: black;
 }
 .dxscViewSelector_KetoSavage .dxmLite_KetoSavage .dxm-main .dxm-item.dxm-hovered
@@ -517,30 +517,30 @@ html.dxIE.dxBrowserVersion-9 .dxscLoadingPanel_KetoSavage .dxlp-loadingImage
     border-top: 1px #757575 solid;
     vertical-align: bottom;
     height: 1px;
-    background-color: #FFFFFF;
+    background-color: #000000;
 }
 .dxscToolTipRoundedCornersLeftSide_KetoSavage
 {
     border-left: 1px #757575 solid;
     vertical-align: bottom;
-    background-color: #FFFFFF;
+    background-color: #000000;
 }
 .dxscToolTipRoundedCornersRightSide_KetoSavage
 {
     border-right: 1px #757575 solid;
     vertical-align: bottom;
-    background-color: #FFFFFF;
+    background-color: #000000;
 }
 .dxscToolTipRoundedCornersBottomSide_KetoSavage
 {
     border-bottom: 1px #757575 solid;
     vertical-align: bottom;
     height: 1px;
-    background-color: #FFFFFF;
+    background-color: #000000;
 }
 .dxscToolTipRoundedCornersContent_KetoSavage
 {
-    background-color: #FFFFFF;
+    background-color: #000000;
     padding: 0;
 }
 .dxscToolTipSquaredCorners_KetoSavage
@@ -566,10 +566,10 @@ html.dxIE.dxBrowserVersion-9 .dxscLoadingPanel_KetoSavage .dxlp-loadingImage
 .dxscTimeMarkerLineV_KetoSavage
 {
     position: absolute;
-    background-color: #DEDEDE;
+    background-color: #000000;
     width: 1px;
     font-size: 0;
-    border: solid 1px #FFFFFF;
+    border: solid 1px #000000;
     border-top-width: 0;
     border-bottom-width: 0;
     box-sizing: content-box;
@@ -578,10 +578,10 @@ html.dxIE.dxBrowserVersion-9 .dxscLoadingPanel_KetoSavage .dxlp-loadingImage
 {
     position: absolute;
     top: -2px;
-    background-color: #DEDEDE;
+    background-color: #000000;
     height: 1px;
     font-size: 0;
-    border: solid 1px #FFFFFF;
+    border: solid 1px #000000;
     border-left-width: 0;
     border-right-width: 0;
 }
@@ -742,12 +742,12 @@ html.dxIE.dxBrowserVersion-9 .dxscLoadingPanel_KetoSavage .dxlp-loadingImage
 .dxsc-dialog-reminder .dxflFormLayout_KetoSavage .dialog-item-Subject .dialog-aspxlabel,
 .dxscBorderSpacing .dxeBase_KetoSavage.dxsc-reminder-form-apt-subject
 {
-    color: #DEDEDE;
+    color: #000000;
     font-size: 16px;
 }
 .dxscControl_KetoSavage .dxsc-cell-touch-handle
 {
-    background-color: #DEDEDE;
+    background-color: #000000;
 }
 .dxpcLite_KetoSavage.dxsc-modal.dxsc-modal-appoinment
 {
