--- a/KetoSavageWeb/KetoSavageWeb/App_Themes/KetoSavage/SpellChecker/styles.css
+++ b/KetoSavageWeb/KetoSavageWeb/App_Themes/KetoSavage/SpellChecker/styles.css
@@ -41,7 +41,7 @@
     -khtml-border-radius: 50%;
     border-radius: 50%;
     animation: dxLoadSpinSys 1s linear infinite;
-    border: 4px solid #DEDEDE;
+    border: 4px solid #000000;
     border-top: 4px solid #EEE;
     width: 24px;
     height: 24px;
