--- a/KetoSavageWeb/KetoSavageWeb/App_Themes/KetoSavage/XtraReports/styles.css
+++ b/KetoSavageWeb/KetoSavageWeb/App_Themes/KetoSavage/XtraReports/styles.css
@@ -1,6 +1,6 @@
 .dxsplControl_KetoSavage .dxmLiteReportToolbarPane
 {
-    background-color: #f1f1f1;
+    background-color: #000000;
     padding: 0;
 }
 .dxmLiteReportToolbarPane .dxrControl_KetoSavage.dxr-tabsHidden .dxr-tabContent
